# cxc-report-engine

./: .gitignore  README.md  compose.yml  main.py  mise.toml  pyproject.toml
config/: email_routes.toml.example  schema.py  settings.py
db/: init.sql
scripts/: pipeline_diario.sh
scripts/systemd/: cxc-pipeline.service  cxc-pipeline.timer
src/: analytics.py  auditor.py  cobrador_cli.py  cobrador_manager.py  data_transformer.py  db_connector.py  email_sender.py  excel_formatter.py  kpis.py  logging_config.py  parquet_exporter.py  pdf_cobrador.py  reporte_cobrador.py  reporte_cxc.py  utils.py
tests/: check_connection.py  test_analytics_tendencias.py  test_analytics_unit.py  test_auditor.py  test_cli_args.py  test_cobrador_cli.py  test_cobrador_manager.py  test_config_schema.py  test_db_connector.py  test_excel_formatter.py  test_kpis.py  test_logging_config.py  test_main_timings.py  test_mypy.py  test_no_dashboard.py  test_parquet_exporter.py  test_pipeline.py  test_reporte_cobrador.py  test_reporte_cxc.py  test_utils.py
